# LAB4-ALSE1

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  doxygen_doc.conf
doc/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  README_8md.html  README_8md_source.html  annotated.html  classParticipante-members.html  classParticipante.html  classes.html  config__tty_8cpp.html  config__tty_8cpp_8o_8d.html  config__tty_8cpp_8o_8d_source.html  config__tty_8cpp_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_02979a4bf8e2f937ffc994d5aa5b6759.html  dir_1d4140e8e9bd4f95977dbe68027510f4.html  dir_446fa3779613ae65430f5581e4f4637e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7b6a6a8d016e61851534849ba32b4bd8.html  dir_a7ad92605c0732c583ab23ed7e226220.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  funciones__gr1_8cpp.html  funciones__gr1_8cpp_8o_8d.html  funciones__gr1_8cpp_8o_8d_source.html  funciones__gr1_8cpp_source.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  lib__grupo1_8h.html  lib__grupo1_8h_source.html  main_8cpp.html  main_8cpp_8o_8d.html  main_8cpp_8o_8d_source.html  main_8cpp_source.html  (+4 more)
doc/latex/: annotated.tex  classParticipante.tex  config__tty_8cpp.tex  config__tty_8cpp_8o_8d.tex  dir_017ad5e908c41501f6a06b5119b37293.tex  dir_02979a4bf8e2f937ffc994d5aa5b6759.tex  files.tex  (+14 more)
include/: lib_grupo1.h
src/: config_tty.cpp  funciones_gr1.cpp  main.cpp
(+19 files in other folders)
